After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749218 - Decklink 4k 3184p50 has wrong name and uses wrong framerate
Decklink 4k 3184p50 has wrong name and uses wrong framerate
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-11 10:11 UTC by Heinrich Fink
Modified: 2015-05-11 10:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix naming of 4K modes (4.10 KB, patch)
2015-05-11 10:11 UTC, Heinrich Fink
committed Details | Review
Use correct framerate for 2160p50 (955 bytes, patch)
2015-05-11 10:12 UTC, Heinrich Fink
committed Details | Review
Also fix naming for 2048p (should be 1556p) (2.26 KB, patch)
2015-05-11 10:19 UTC, Heinrich Fink
committed Details | Review

Description Heinrich Fink 2015-05-11 10:11:52 UTC
Created attachment 303198 [details] [review]
Fix naming of 4K modes

The 4K modes "3184pXX" have confusing names (should be 2160p). Also, 3184p50 (should be: 2160p50), uses 55/1, instead of 50/1. Patches to fix this are attached.
Comment 1 Heinrich Fink 2015-05-11 10:12:24 UTC
Created attachment 303199 [details] [review]
Use correct framerate for 2160p50
Comment 2 Sebastian Dröge (slomo) 2015-05-11 10:15:21 UTC
commit 1dabd7c5b800670c22a728af8bb62000ad732c93
Author: Heinrich Fink <hfink@toolsonair.com>
Date:   Mon May 11 12:04:47 2015 +0200

    decklink: Use correct frame rate for mode 2160p50
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749218

commit e6d82dec327730274c6a24dbd8f6f901dbfa9288
Author: Heinrich Fink <hfink@toolsonair.com>
Date:   Mon May 11 12:02:47 2015 +0200

    decklink: Rename mode 3184p to 2160p
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749218
Comment 3 Heinrich Fink 2015-05-11 10:19:37 UTC
Created attachment 303200 [details] [review]
Also fix naming for 2048p (should be 1556p)
Comment 4 Sebastian Dröge (slomo) 2015-05-11 10:20:50 UTC
Comment on attachment 303200 [details] [review]
Also fix naming for 2048p (should be 1556p)

commit 6007829e77b6335b80d66d258013d17cab426707
Author: Heinrich Fink <hfink@toolsonair.com>
Date:   Mon May 11 12:18:28 2015 +0200

    decklink: Rename mode 2048p to 1556p
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749218