decklink: Rename mode 3184p to 2160p

https://bugzilla.gnome.org/show_bug.cgi?id=749218